--- a/form-hook-zod/src/styles/globals.css
+++ b/form-hook-zod/src/styles/globals.css
@@ -22,3 +22,8 @@ body , #root {
     font-family: Poppins, system-ui, sans-serif
   }
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
